logic of adding a task

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 </main>
-
+<!-- Footer with a dynamic copyright notice -->
 <footer>
     <p>Copyright &#169; <%= new Date().getFullYear() %> </p>
 </footer>
