--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,7 @@
     <!-- <link rel="stylesheet" href="styles/main.css" /> -->
   </head>
   <body>
+    <!-- Navigation bar with links to the main and work-specific todo lists -->
     <nav>
       <ul>
         <li>
