--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,54 +3,100 @@
   margin: 0;
   padding: 0;
 }
-
 body {
-  background-color: rgb(202, 163, 222);
+  /* background: linear-gradient(rgb(136, 5, 136) 50%, rgb(226, 158, 232)); */
+  background-color: #e4e9fd;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
-
-  justify-content: center;
+  /* justify-content: center; */
+  text-align: center;
 }
-
+/* main {
+  display: flex;
+} */
 h1 {
-  font-size: 3.5rem;
-  background-color: blueviolet;
+  font-size: 1.9rem;
   color: white;
+  /* margin-top: 0; */
+  padding: 1.5rem;
 }
 nav {
+  display: flex;
+  justify-content: flex-start;
+}
+nav ul {
+  list-style: none;
+  /* text-align: left; */
+  padding: 2rem;
+}
+nav li {
+  display: inline;
+  margin-right: 10px;
+}
+/* nav  {
   width: 100%;
   flex-direction: row;
   justify-content: flex-start;
   padding: 1rem;
   color: hsl(264, 77%, 61%);
-}
+} */
 nav a {
   text-decoration: none;
-  color: hsl(264, 77%, 61%);
-  padding: 1rem;
+  color: rgb(85, 26, 139);
+  padding: 2rem;
 }
 nav ul li a {
   text-decoration: none;
-  font-size: 15px;
+  font-size: 2rem;
 }
+#heading {
+  text-align: center;
+  background-color: #a683e3;
+}
+.box {
+  max-width: 400px;
+  margin: 50px 0;
+  border-radius: 0.5rem;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+  margin-bottom: 3rem;
+  width: 80%;
+}
+
 .todo-container {
   background-color: white;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
   max-width: 400px;
   margin: 0 auto;
   border-radius: 0.5rem;
+  width: 80%;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 .item {
   min-height: 70px;
   display: flex;
-  align-items: center;
+  text-align: left;
   border-bottom: 1px solid #f1f1f1;
 }
-
-input {
+#todo-list li {
+  /* border-bottom: 1px solid #f1f1f1; */
+  padding: 1rem 0;
+}
+#todo-list li:last:child {
+  border-bottom: none;
+}
+#todo-list input[type="checkbox"] {
+  margin-right: 20px;
+}
+form {
+  margin-top: 20px;
+}
+/* input {
   appearance: none;
   -webkit-appearance: none;
   border: 0;
@@ -58,9 +104,28 @@ input {
   padding: 1rem;
   color: white;
   cursor: pointer;
-}
+} */
 
+input[type="text"] {
+  text-align: center;
+  height: 60px;
+  border: none;
+  font-size: 2rem;
+  font-weight: 200;
+  width: 313px;
+}
+button {
+  min-height: 50px;
+  width: 50px;
+  border: none;
+  border-radius: 50%;
+  background-color: #a683e3;
+  font-size: 30px;
+  border-color: transparent;
+}
 footer {
   position: absolute;
   bottom: 0;
+  justify-content: center;
+  align-items: center;
 }
