--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -11,8 +11,9 @@ body {
   /* height: 100vh; */
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   text-align: center;
+  /* align-items: center; */
+  min-height: 95vh;
 }
 /* main {
   display: flex;
@@ -20,12 +21,14 @@ body {
 h1 {
   font-size: 1.9rem;
   color: white;
-  /* margin-top: 0; */
   padding: 1.5rem;
+  text-align: center;
 }
 nav {
+  width: 100%;
   display: flex;
   justify-content: flex-start;
+  padding: 1rem;
 }
 nav ul {
   list-style: none;
@@ -36,41 +39,33 @@ nav li {
   display: inline;
   margin-right: 10px;
 }
-/* nav  {
-  width: 100%;
-  flex-direction: row;
-  justify-content: flex-start;
-  padding: 1rem;
-  color: hsl(264, 77%, 61%);
-} */
-nav a {
+nav ul li a {
   text-decoration: none;
+  font-size: 1.5rem;
   color: rgb(85, 26, 139);
   padding: 2rem;
 }
-nav ul li a {
-  text-decoration: none;
-  font-size: 2rem;
-}
+
 #heading {
   text-align: center;
   background-color: #a683e3;
+  margin-left: auto;
+  margin-right: auto;
 }
 .box {
   max-width: 400px;
   margin: 50px 0;
   border-radius: 0.5rem;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
-  margin: 0 auto;
   margin-bottom: 3rem;
   width: 80%;
 }
-
 .todo-container {
+  margin-left: auto;
+  margin-right: auto;
   background-color: white;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
   max-width: 400px;
-  margin: 0 auto;
   border-radius: 0.5rem;
   width: 80%;
   padding: 1rem;
@@ -84,8 +79,9 @@ nav ul li a {
   border-bottom: 1px solid #f1f1f1;
 }
 #todo-list li {
-  /* border-bottom: 1px solid #f1f1f1; */
-  padding: 1rem 0;
+  border-bottom: 1px solid #f1f1f1;
+  padding: 20px 10px;
+  list-style-type: none;
 }
 #todo-list li:last:child {
   border-bottom: none;
@@ -110,9 +106,12 @@ input[type="text"] {
   text-align: center;
   height: 60px;
   border: none;
+  outline: none;
   font-size: 2rem;
   font-weight: 200;
   width: 313px;
+  border-bottom: 1px solid #a683e3;
+  background: transparent;
 }
 button {
   min-height: 50px;
@@ -122,10 +121,20 @@ button {
   background-color: #a683e3;
   font-size: 30px;
   border-color: transparent;
+  color: white;
+  border-width: 0;
+}
+#todo-list span {
+  font-size: 20px;
+  height: 60px;
 }
 footer {
   position: absolute;
   bottom: 0;
+  display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  margin-bottom: 1rem;
+  color: rgba(0, 0, 0, 0.8);
 }
